# sec-edgar-search

./: .gitignore  README.md  extract.py  install-firefox-headless.sh  main.py  pyproject.toml  requriments.txt  requrimentx.txt  setup.cfg  setup.py  test.py
secpanda/: extract.py
src/secpanda/: extract.py
src/secpanda_SAGAR_MK.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
