[metadata]
name = secpanda-SAGARMK
version = 0.0.1
author = SAGAR MK
author_email = sagarmk@github.com
description = simple package to download sec files by agreement type
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sagarmk/sec-edgar-search.git
project_urls =
    Bug Tracker = https://github.com/sagarmk/sec-edgar-search.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src